- Fix collection switcher top position on mobile. - Fix twig error when no schedule data on now page.

--- a/public/less/components/collection-switcher.less
+++ b/public/less/components/collection-switcher.less
@@ -11,6 +11,9 @@
     position: fixed;
     top: @navbar-height - 34px;
 
+    @media (max-width: @screen-sm) {
+      top: @navbar-height - 35px;
+    }
 
     @width: 35px;
     width: @width;
